# workflowx

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MEETING_INTELLIGENCE_STACK.md  Makefile  README.md  claude-desktop-config.json  pyproject.toml  quickstart.sh  setup-mcp.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: LINKEDIN_ARTICLE.md  PRD_tech_stack_upgrade.md  SOCIAL_AUTOMATION_SETUP.md  SOCIAL_POSTS.md  openai_tech_stack_deep_dive_workflowx.md
src/workflowx/: __init__.py  __main__.py  config.py  daemon.py  dashboard.py  demo.py  export.py  mcp_server.py  measurement.py  models.py  notifications.py  scaffold.py  server.py  storage.py
src/workflowx/api/: __init__.py
src/workflowx/capture/: __init__.py  activitywatch.py  screenpipe.py
src/workflowx/cli/: __init__.py  main.py
src/workflowx/eval/: runner.py
src/workflowx/eval/datasets/: annotated_sessions.json
src/workflowx/eval/graders/: friction_grader.py  intent_grader.py  roi_grader.py
src/workflowx/guardrails/: __init__.py  confidence_gate.py  mechanism_validator.py  savings_validator.py  yaml_validator.py
src/workflowx/inference/: __init__.py  clusterer.py  intent.py  patterns.py  reporter.py
src/workflowx/meeting/: __init__.py  debrief_agent.py  gmail_push.py  prompt_templates.py  tasks_updater.py
src/workflowx/meeting/prebrief/: __init__.py  brief_agent.py  context_gatherer.py
src/workflowx/meeting/sidebar/: __init__.py  consent_guard.py  sidebar_agent.py
src/workflowx/memory/: __init__.py  proposal_history.py
src/workflowx/ms_graph/: __init__.py  auth.py  client.py
src/workflowx/reasoning/: __init__.py  cost_logger.py  model_selector.py
src/workflowx/replacement/: __init__.py  engine.py
src/workflowx/social/: __init__.py  linkedin_poster.py  mcp_tools.py  post_scheduler.py  twitter_poster.py
tests/: test_meeting_intelligence.py  test_social.py
tests/unit/: test_clusterer.py  test_config.py  test_daemon.py  test_dashboard.py  test_eval.py  test_export.py  test_guardrails.py  test_intent.py  test_mcp_server.py  test_measurement.py  test_model_routing.py  test_models.py  test_patterns.py  test_proposal_memory.py  test_reporter.py  test_storage.py  test_storage_v2.py  test_yaml_validator.py
